--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2061868248407566"
+      crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <link rel="stylesheet" type="text/css" href="/src/App.css">
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- AdSense reklam kodu -->
+    <!-- Reklam2 -->
+    <ins class="adsbygoogle ad-container"
+         data-ad-client="ca-pub-2061868248407566"
+         data-ad-slot="7060780176"
+         data-ad-format="600x600"
+         data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
   </body>
 </html>
