URL 404  Not Found Hatası çözümü

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <link rel="stylesheet" type="text/css" href="/src/App.css">
+    <link rel="stylesheet" type="text/css" href="/src/style.css">
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <!-- AdSense reklam kodu -->
     <!-- Reklam2 -->
-    <ins class="adsbygoogle ad-container"
-         data-ad-client="ca-pub-2061868248407566"
-         data-ad-slot="7060780176"
-         data-ad-format="600x600"
-         data-full-width-responsive="true"></ins>
+    <ins class="adsbygoogle my-custom-class"
+      data-ad-client="ca-pub-2061868248407566"
+      data-ad-slot="7060780176"
+      data-ad-format="auto"
+      data-full-width-responsive="true"></ins>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
